2008-04-01  Geoffrey Garen  <ggaren@apple.com>

        Build fix: marked ASSERT-only variables as UNUSED_PARAMs.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::symbolTableInitializeVariable):

2008-04-01  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Next step toward global code: Moved get, put, and initializeVariable
        functionality up into JSVariableObject, and changed JSActivation to
        rely on it. 

        * kjs/JSActivation.cpp:
        (KJS::JSActivation::JSActivation):
        (KJS::JSActivation::getOwnPropertySlot):
        (KJS::JSActivation::put):
        (KJS::JSActivation::initializeVariable):
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::valueAt):
        (KJS::JSVariableObject::isReadOnly):
        (KJS::JSVariableObject::symbolTableGet):
        (KJS::JSVariableObject::symbolTablePut):
        (KJS::JSVariableObject::symbolTableInitializeVariable):

2008-04-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Sam.
        
        - fix HashTable assertion on some SunSpider tests
        
        Don't use -1 as the deleted value for JSValue*-keyed hashtables,
        since it is a valid value (it's the immediate for -1).

        * VM/CodeGenerator.h:
        (KJS::CodeGenerator::JSValueHashTraits::emptyValue):
        (KJS::CodeGenerator::JSValueHashTraits::deletedValue):
        * kjs/JSImmediate.h:
        (KJS::JSImmediate::impossibleValue):

2008-04-01  Sam Weinig  <sam@webkit.org>

        Reviewed by Maciej Stachowiak.

        Add support for calling Native constructors like new Array(). 

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitConstruct):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp: